--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
 
   <div class="nav-links">
     <a href="/tools.html">🛠️ Tools</a>
+    <div class="section">
+  <h2>Advisory</h2>
+  <div class="card-grid">
+    <a href="/bitclave.html" class="card">
+      <h3>BitClave Claim Recovery</h3>
+      <p>$2M+ recovered from a “dead” ICO by rebuilding proof and coordinating global holders.</p>
+    </a>
+  </div>
+</div>
     <a href="/about.html">📘 About</a>
     <a href="/contact.html">📬 Contact</a>
     <a href="/writing.html">✍️ Writing</a>
