--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
   <div class="nav-links">
     <a href="/tools.html">🛠️ Tools</a>
-    <div class="section">
+    <a href="/bitclave.html">📁 Advisory</a>
+  <div class="section">
   <h2>Advisory</h2>
   <div class="card-grid">
     <a href="/bitclave.html" class="card">
