--- a/index.html
+++ b/index.html
@@ -4,46 +4,82 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thomas Braziel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f9fafb;
       margin: 0;
-      padding: 40px;
-      max-width: 800px;
-      margin: auto;
-      color: #333;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #fff;
+      color: #111;
+      line-height: 1.6;
     }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    p.intro {
-      font-size: 1.1rem;
-      margin-bottom: 30px;
-      color: #555;
-    }
-    .nav-links {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-      margin-top: 30px;
-    }
-    .nav-links a {
-      padding: 12px 20px;
-      background-color: #4f46e5;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
+
+    .intro {
+      text-align: center;
+      margin: 40px 20px 10px;
       font-size: 1rem;
     }
-    .nav-links a:hover {
-      background-color: #4338ca;
+
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      margin-bottom: 30px;
     }
+
+    .nav-links a {
+      text-decoration: none;
+      font-weight: 500;
+      color: #333;
+    }
+
+    .nav-links a:hover {
+      text-decoration: underline;
+    }
+
     .section {
+      max-width: 720px;
+      margin: 0 auto 60px;
+      padding: 0 20px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2rem;
       margin-top: 40px;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      font-weight: 600;
+    }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .card {
+      display: block;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 16px;
+      text-decoration: none;
+      color: inherit;
+      transition: box-shadow 0.2s ease;
+    }
+
+    .card:hover {
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      margin-bottom: 10px;
+      font-size: 1.25rem;
     }
   </style>
 </head>
@@ -51,21 +87,12 @@
 
   <h1>Thomas Braziel</h1>
   <p class="intro">
-    Distressed asset investor. Bankruptcy nerd. Builder of tools for claimants, funds, and pros navigating complex estates.
+    Distressed asset investor. Bankruptcy nerd. Builder of <span style="background: #ffff00">tools</span> for claimants, funds, and pros navigating complex estates.
   </p>
 
   <div class="nav-links">
     <a href="/tools.html">🛠️ Tools</a>
     <a href="/bitclave.html">📁 Advisory</a>
-  <div class="section">
-  <h2>Advisory</h2>
-  <div class="card-grid">
-    <a href="/bitclave.html" class="card">
-      <h3>BitClave Claim Recovery</h3>
-      <p>$2M+ recovered from a “dead” ICO by rebuilding proof and coordinating global holders.</p>
-    </a>
-  </div>
-</div>
     <a href="/about.html">📘 About</a>
     <a href="/contact.html">📬 Contact</a>
     <a href="/writing.html">✍️ Writing</a>
@@ -73,9 +100,19 @@
 
   <div class="section">
     <p>
-      I’ve spent the last decade helping claimholders unlock recovery in some of the world’s most tangled bankruptcies — from <strong>Mt. Gox</strong> to <strong>Belmond</strong> to <strong>3AC</strong>. 
+      I’ve spent the last decade helping claimholders unlock recovery in some of the world’s most tangled bankruptcies — from <s>MtGox</s> to BitClave.  
       I believe better information and better math empower everyone — claimants, professionals, and investors alike.
     </p>
+  </div>
+
+  <div class="section">
+    <h2>Advisory</h2>
+    <div class="card-grid">
+      <a href="/bitclave.html" class="card">
+        <h3>BitClave Claim Recovery</h3>
+        <p>$2M+ recovered from a “dead” ICO by rebuilding proof and coordinating global holders.</p>
+      </a>
+    </div>
   </div>
 
 </body>
