--- a/index.html
+++ b/index.html
@@ -4,116 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thomas Braziel</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: #fff;
-      color: #111;
-      line-height: 1.6;
-    }
-
-    .intro {
-      text-align: center;
-      margin: 40px 20px 10px;
-      font-size: 1rem;
-    }
-
-    .nav-links {
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      margin-bottom: 30px;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      font-weight: 500;
-      color: #333;
-    }
-
-    .nav-links a:hover {
-      text-decoration: underline;
-    }
-
-    .section {
-      max-width: 720px;
-      margin: 0 auto 60px;
-      padding: 0 20px;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 2rem;
-      margin-top: 40px;
-    }
-
-    h2 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      font-weight: 600;
-    }
-
-    .card-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .card {
-      display: block;
-      padding: 20px;
-      border: 1px solid #ddd;
-      border-radius: 16px;
-      text-decoration: none;
-      color: inherit;
-      transition: box-shadow 0.2s ease;
-    }
-
-    .card:hover {
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    .card h3 {
-      margin-top: 0;
-      margin-bottom: 10px;
-      font-size: 1.25rem;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
 
-  <h1>Thomas Braziel</h1>
-  <p class="intro">
-    Distressed asset investor. Bankruptcy nerd. Builder of <span style="background: #ffff00">tools</span> for claimants, funds, and pros navigating complex estates.
-  </p>
-
-  <div class="nav-links">
-    <a href="/tools.html">🛠️ Tools</a>
-    <a href="/bitclave.html">📁 Advisory</a>
-    <a href="/about.html">📘 About</a>
-    <a href="/contact.html">📬 Contact</a>
-    <a href="/writing.html">✍️ Writing</a>
-  </div>
-
-  <div class="section">
-    <p>
-      I’ve spent the last decade helping claimholders unlock recovery in some of the world’s most tangled bankruptcies — from <s>MtGox</s> to BitClave.  
-      I believe better information and better math empower everyone — claimants, professionals, and investors alike.
+  <!-- Header -->
+  <div class="text-center py-16 px-4">
+    <h1 class="text-4xl font-bold mb-4">Thomas Braziel</h1>
+    <p class="text-lg text-gray-700 max-w-xl mx-auto">
+      Distressed asset investor. Bankruptcy nerd. Builder of <span class="font-semibold">tools</span> for claimants, funds, and pros navigating complex estates.
     </p>
   </div>
 
-  <div class="section">
-    <h2>Advisory</h2>
-    <div class="card-grid">
-      <a href="/bitclave.html" class="card">
-        <h3>BitClave Claim Recovery</h3>
-        <p>$2M+ recovered from a “dead” ICO by rebuilding proof and coordinating global holders.</p>
-      </a>
-    </div>
+  <!-- Nav Buttons -->
+  <div class="flex flex-wrap justify-center gap-4 mb-12">
+    <a href="/tools.html" class="px-4 py-2 bg-violet-600 text-white rounded-lg font-semibold">🛠️ Tools</a>
+    <a href="/bitclave.html" class="px-4 py-2 bg-violet-600 text-white rounded-lg font-semibold">📁 Advisory</a>
+    <a href="/about.html" class="px-4 py-2 bg-violet-600 text-white rounded-lg font-semibold">📘 About</a>
+    <a href="/contact.html" class="px-4 py-2 bg-violet-600 text-white rounded-lg font-semibold">📬 Contact</a>
+    <a href="/writing.html" class="px-4 py-2 bg-violet-600 text-white rounded-lg font-semibold">✍️ Writing</a>
   </div>
 
-</body>
-</html>
+  <!-- Intro Section -->
+  <div class="max-w-3xl mx-auto px-4 mb-16">
+    <p class="text-base leading-relaxed">
+      I’ve spent the last decade helping claimholders unlock recovery in some of the world’s most tangled bankruptcies — from <s>MtGox</s> to BitClave.
+      I believe better information and better math empower everyone — claimants, professionals,
